[CoordinatedGraphics] Deadlock when running abspos-child-container-changes-from-relative-to-static.html https://bugs.webkit.org/show_bug.cgi?id=106884

Reviewed by Benjamin Poulain.

We need to return false if m_waitingForUIProcess is true since otherwise
we'll not really repaint in performScheduledLayerFlush() and the
UI process will wait forever. Returning false leads to executing the layer flush
synchronously and immediately, then acknowledging the
callback to the WebProcess - which resolves the deadlock.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::forceRepaintAsync): Return false in order to trigger a synchronous repaint if m_waitingForUIProcess is true.


Canonical link: https://commits.webkit.org/125164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139781 268f45cc-cd09-0410-ab3c-d52691b4dbfc